# tzuzulDataAnalytics

./: .gitignore  README.md  pyproject.toml
IrisDataSet/: graficas.ipynb  main.ipynb
cache/artifacts/8b/87/66/93a0be9cfbb56e1bf8a3d8ffef4223ceea2c999cd873c3868ac8deb10e/: debugpy-1.6.3-cp38-cp38-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl
cache/artifacts/ae/b8/53/705c7f8c057d4fc0463e03454af8a0c41c26ad9e4ff5ec369f99bea5c2/: pyzmq-23.2.1-cp38-cp38-manylinux_2_12_x86_64.manylinux2010_x86_64.whl
cache/artifacts/d7/6a/08/150ef19d66c8c7e625a935d26620964f011553dd3233c4059d181ac6ea/: tornado-6.2-cp37-abi3-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl
cache/artifacts/d8/c7/e8/b56016f90af1a87a7da86ed391952b84841051ed91f804f4d288f7c685/: jupyter_client-7.3.4-py3-none-any.whl
cache/artifacts/f9/3d/4c/dfe358db1fa15e960c9527f5f76c330dea70ae61b7d48609b4a83d754f/: ipykernel-6.15.1-py3-none-any.whl
cuartaClase/: csv.ipynb
dataFrames/: dataFrames.ipynb  example.csv
matplotlib/: main.ipynb
primeraClase/: narray.ipynb
quintaClase/: pandasy.ipynb
segundClase/: operaciones.ipynb
tercera clase/: producto.ipynb
