[tool.poetry]
name = "tzuzulcodedataanalytics"
version = "0.1.0"
description = ""
authors = ["Shadowrunner11 <matematicadivina1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"
ipykernel = "^6.15.1"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
